[project]
name = "agentic-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "digiplugtech",email = "digiplugtech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "openai (>=2.8.1,<3.0.0)",
    "unicorn[standard] (>=2.1.4,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-core (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langgraph (>=1.0.4,<2.0.0)",
    "langserve[all] (>=0.3.3,<0.4.0)",
    "sse-starlette (<2.0.0)",
    "openai-agents (>=0.6.1,<0.7.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "langchain-google-genai (>=3.2.0,<4.0.0)",
    "langchain-anthropic (>=1.2.0,<2.0.0)",
    "langchain-huggingface (>=1.1.0,<2.0.0)",
    "chromadb (>=1.3.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
